--- a/index.html
+++ b/index.html
@@ -514,20 +514,21 @@
             </li>
           </ul>
         </div>
-
+        <!-- Subscribe form -->
         <div class="subscribe-form-container">
+          <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-form-label">
-              Subscribe
+            <label class="subscribe-label">
               <input
-                class="subscribe-form-input"
+                class="subscribe-input"
                 type="email"
+                name="user-email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscr-btn" type="submit">
+            <button class="subscribe-btn" type="submit">
               Subscribe
-              <svg class="subcr-icon-fill" width="24" height="24">
+              <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#subscribeicon"></use>
               </svg>
             </button>
