--- a/index.html
+++ b/index.html
@@ -545,40 +545,24 @@
             <use href="./images/icons.svg#closeicon"></use>
           </svg>
         </button>
-
-        <form class="modal-form-container">
-          <fieldset class="modal-form-group">
-            <legend class="legend">
-              Leave your contacts and we will call you back
-            </legend>
-            <label class="label-title">
-              Name
-              <input class="input" type="text" />
-            </label>
-            <label class="label-title">
-              Phone
-              <input class="input" type="tel" />
-            </label>
-            <label class="label-title">
-              Email
-              <input class="input" type="email" />
-            </label>
-            <label class="label-title">
-              Comment
-              <textarea
-                class="input"
-                name=""
-                rows=""
-                placeholder="Text input"
-              ></textarea>
-            </label>
-
-            <div class="checkbox-license-container">
-              <input class="checkbox" type="checkbox" name="" value="" />
-              <p>I accept the terms and conditions of the Privacy Policy</p>
+        <p class="callback-form-tittle">
+          Leave your contacts and we will call you back
+        </p>
+        <form>
+          <div class="callback-form-container">
+            <label for="user-name" class="label-tittle">Name</label>
+            <div class="input-container">
+              <input
+                class="input-text"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="callback-icon" width="18" height="24">
+                <use href="./images/icons.svg#iconname"></use>
+              </svg>
             </div>
-            <button type="submit">Send</button>
-          </fieldset>
+          </div>
         </form>
       </div>
     </div>
