--- a/index.html
+++ b/index.html
@@ -549,11 +549,12 @@
           Leave your contacts and we will call you back
         </p>
         <form>
+          <!--Name-->
           <div class="callback-form-container">
             <label for="user-name" class="label-tittle">Name</label>
             <div class="input-container">
               <input
-                class="input-text"
+                class="input-content"
                 type="text"
                 id="user-name"
                 name="user-name"
@@ -563,9 +564,65 @@
               </svg>
             </div>
           </div>
+          <!--Phone-->
+          <div class="callback-form-container">
+            <label for="user-phone" class="label-tittle">Phone</label>
+            <div class="input-container">
+              <input
+                class="input-content"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+              />
+              <svg class="callback-icon" width="18" height="24">
+                <use href="./images/icons.svg#iconphone"></use>
+              </svg>
+            </div>
+          </div>
+          <!--Email-->
+          <div class="callback-form-container">
+            <label for="user-email" class="label-tittle">Email</label>
+            <div class="input-container">
+              <input
+                class="input-content"
+                type="email"
+                id="user-email"
+                name="user-email"
+              />
+              <svg class="callback-icon" width="18" height="24">
+                <use href="./images/icons.svg#iconemail"></use>
+              </svg>
+            </div>
+          </div>
+          <!--Comment-->
+          <div class="callback-form-container">
+            <label for="user-comment" class="label-tittle">Comment</label>
+            <textarea
+              class="comment-content"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              cols=""
+              rows=""
+            >
+            </textarea>
+          </div>
+          <!--Checkbox-->
+          <div class="checkbox-container">
+            <input class="visually-hidden" type="checkbox" id="user-privasy" name="user-privasy" value="true" checked>
+            <label for="user-privasy" class="label-tittle">
+              <span class="checkbox-item">
+                <svg class="checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#checkbox"></use>
+              </svg>
+            </span>I accept the terms and conditions of the Privacy Policy
+              
+            </label>
+          </div>
         </form>
       </div>
     </div>
+    </body>
     <script src="./js/modal.js"></script>
   </body>
 </html>
