--- a/portfolio.html
+++ b/portfolio.html
@@ -337,8 +337,8 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
               >
-                <svg class="icons-fill" width="24" height="24">
-                  <use href="./images/icons.svg#linkedin"></use>
+                <svg class="icons-fill" width="10" height="8">
+                  <use href="./images/icons.svg#checkbox"></use>
                 </svg>
               </a>
             </li>
