--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             </div>
           </div>
           <!--Comment-->
-          <div class="callback-form-container">
+          <div class="callback-form-container comment">
             <label for="user-comment" class="label-tittle">Comment</label>
             <textarea
               class="comment-content"
@@ -609,8 +609,8 @@
           </div>
           <!--Checkbox-->
           <div class="checkbox-container">
-            <input class="visually-hidden" type="checkbox" id="user-privasy" name="user-privasy" value="true" checked>
-            <label for="user-privasy" class="label-tittle">
+            <input class="visually-hidden" type="checkbox" id="user-privacy" name="user-privacy" value="true" checked>
+            <label for="user-privacy" class="label-tittle">
               <span class="checkbox-item">
                 <svg class="checkbox-icon" width="10" height="8">
                 <use href="./images/icons.svg#checkbox"></use>
