--- a/index.html
+++ b/index.html
@@ -613,12 +613,13 @@
             <label for="user-privacy" class="label-tittle">
               <span class="checkbox-item">
                 <svg class="checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#checkbox"></use>
-              </svg>
-            </span>I accept the terms and conditions of the Privacy Policy
-              
+                  <use href="./images/icons.svg#checkbox"></use>
+                </svg>
+              </span>I accept the terms and conditions of the <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
           </div>
+          <!--Form button-->
+          <button class="callback-btn">Send</button>
         </form>
       </div>
     </div>
