--- a/index.html
+++ b/index.html
@@ -602,20 +602,28 @@
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
-              cols=""
-              rows=""
+              cols="30"
+              rows="40"
             >
             </textarea>
           </div>
           <!--Checkbox-->
           <div class="checkbox-container">
-            <input class="visually-hidden" type="checkbox" id="user-privacy" name="user-privacy" value="true" checked>
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+              checked
+            />
             <label for="user-privacy" class="label-tittle">
               <span class="checkbox-item">
                 <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#checkbox"></use>
-                </svg>
-              </span>I accept the terms and conditions of the <a class="privacy-policy-link" href="">Privacy Policy</a>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
           </div>
           <!--Form button-->
@@ -623,7 +631,6 @@
         </form>
       </div>
     </div>
-    </body>
     <script src="./js/modal.js"></script>
   </body>
 </html>
