Upd checkbox input

--- a/index.html
+++ b/index.html
@@ -610,12 +610,11 @@
           <!--Checkbox-->
           <div class="checkbox-container">
             <input
-              class="visually-hidden"
+              class="visually-hidden input"
               type="checkbox"
               id="user-privacy"
               name="user-privacy"
               value="true"
-              checked
             />
             <label for="user-privacy" class="label-tittle">
               <span class="checkbox-item">
