upd modal-form. footer-logo. btn:h/f

--- a/portfolio.html
+++ b/portfolio.html
@@ -286,7 +286,7 @@
     <footer class="footer-container">
       <div class="container footer-box">
         <div class="footer-aside">
-          <a class="logo footer-logo" href="./index.html"
+          <a class="footer-logo" href="./index.html"
             >Web<span class="footer-studio-color">Studio</span>
           </a>
           <p class="footer-text">
@@ -337,8 +337,8 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
               >
-                <svg class="icons-fill" width="10" height="8">
-                  <use href="./images/icons.svg#checkbox"></use>
+                <svg class="icons-fill" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
