--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     <footer class="footer-container">
       <div class="container footer-box">
         <div class="footer-aside">
-          <a class="logo footer-logo" href="./index.html"
+          <a class="footer-logo" href="./index.html"
             >Web<span class="footer-studio-color">Studio</span>
           </a>
           <p class="footer-text">
@@ -616,7 +616,7 @@
               name="user-privacy"
               value="true"
             />
-            <label for="user-privacy" class="label-tittle">
+            <label for="user-privacy" class="comment-label-tittle">
               <span class="checkbox-item">
                 <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#checkbox"></use>
